httpserver/k8s_yaml_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-gateway
  namespace: lendea
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - lendea.com
      secretName: lendea-tls
  rules:
    - host: lendea.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpserver-svc
                port:
                  number: 8080
